# rust-payment-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: scalability_bench.rs
src/: account_actor.rs  cli.rs  csv_io.rs  errors.rs  event_store.rs  lib.rs  main.rs  models.rs  scalable_engine.rs  server.rs  shard_manager.rs  storage.rs  tx_registry_actor.rs
tests/: architecture.rs  core_transactions.rs  dispute_resolution.rs
tests/fixtures/: basic.csv  disputes.csv  edge_cases.csv
