[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# CSV with async support
csv-async = "1.3"

# Core serialization
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI & Logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "scalability_bench"
harness = false
